# geocities-boilerplate

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy-demo.yml
demo/: about.html  gallery.html  guestbook.html  index.html  links.html
demo/candy/: about.html  gallery.html  guestbook.html  index.html  links.html
demo/candy/css/: style.css
demo/candy/js/: main.js
demo/css/: style.css
demo/forest/: about.html  gallery.html  guestbook.html  index.html  links.html
demo/forest/css/: style.css
demo/forest/js/: main.js
demo/js/: main.js
demo/neon/: about.html  gallery.html  guestbook.html  index.html  links.html
demo/neon/css/: style.css
demo/neon/js/: main.js
demo/space/: about.html  gallery.html  guestbook.html  index.html  links.html
demo/space/css/: style.css
demo/space/js/: main.js
demo/windows/: about.html  gallery.html  guestbook.html  index.html  links.html
demo/windows/css/: style.css
demo/windows/js/: main.js
deno/: README.md  deno.json  main.ts
deno/src/: generator.ts  prompts.ts  themes.ts
deno/templates/: links.html
go/: LICENSE  README.md  go.mod  main.go
go/internal/: generator.go  themes.go
go/internal/templates/js/: main.js
php/: README.md  composer.json
php/src/: Generator.php  Themes.php
php/templates/: guestbook.html
python/: README.md  pyproject.toml
python/create_geocities_app/: cli.py  generator.py  themes.py
ruby/: README.md  create_geocities_app.gemspec
ruby/lib/: create_geocities_app.rb
ruby/lib/create_geocities_app/: generator.rb  themes.rb  version.rb
ruby/templates/: gallery.html
ruby/templates/css/: style.css
rust/: Cargo.toml  README.md
rust/src/: generator.rs  main.rs  themes.rs
scripts/: build-demo.js
src/: generator.js  prompts.js  themes.js
templates/: about.html  gallery.html  guestbook.html  index.html  links.html
templates/css/: style.css
